--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -23,9 +23,9 @@ Link{
     text-decoration: none;
     font-weight: bold;
 }
-.loginBtn{
+.loginBtn button{
     outline: none;
     padding: 5px 10px;
-    background-color: rgb(98, 196, 196);
+    background: rgb(98, 196, 196);
 }
   
