--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -7,6 +7,7 @@
 } */
 .home{
     /* border: 4px solid black; */
+    margin-top: 50px ;
     background: cover;
     height: 620px;
     background-repeat: no-repeat;
