--- a/src/Components/Ride/Ride.css
+++ b/src/Components/Ride/Ride.css
@@ -1,4 +1,23 @@
 .ticketLayout{
-    margin-top: 70px;
+	/* background-image: url('../Images/group.png'); */
+    /* width: 300px; */
+    margin-top: 100px;
     margin-left: 60px;
+    border: 1px solid gray;
+	border-radius: 5px;
+	background: linear-gradient(to right, #8e9ba3, #afc7d4); ;
+    height: 200px;
+}
+.ticketLayout button{
+	margin-top: 40px;
+    border-radius: 20px;
+	border: 1px solid #58a5d8;
+	background-color: #426b9b;
+	color: #FFFFFF;
+	font-size: 12px;
+	font-weight: bold;
+	padding: 12px 45px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	outline: none;
 }
