--- a/src/Components/Book/Book.css
+++ b/src/Components/Book/Book.css
@@ -3,20 +3,54 @@
     margin-left: 60px;
     margin-right: 50px;
     border: 1px solid gray;
-    border-radius: 5px;
-    height: 400px;
-    width: 400px;
+    border-radius: 10px;
+    height: 300px;
+    width: 250px;
+    background-color: rgba(199, 193, 193, 0.609);
+
+}
+.ticketDetail{
+    line-height: 0%;
+    margin-left: 60px;
+    margin-right: 50px;
+    border: 1px solid gray;
+    border-radius: 10px;
+    height: 420px;
+    width: 250px;
     background-color: rgba(199, 193, 193, 0.609);
 }
+.destination{
+    border: 1px solid gray;
+    background: rgba(228, 83, 31, 0.822);
+    margin: 20px 20px;
+    border-radius: 10px;
+    padding: 20px 30px;
+}
+.ticketPrice{
+    padding: 0 10px;
+    border: 1px solid gray;
+    margin: 5px 20px;
+    background-color: rgb(155, 161, 167);
+    border-radius: 10px;
+}
 .form p{
+    margin: 20px 20px;
     padding: 10px 10px;
 }
 .form input{
-    width: 80%;
+    border: 0;
+    border-radius: 10px;
+    width: 50%;
+    padding: 10px 20px;
     margin-left: 20px;
 }
-.from button{
-    margin-top: 20px;
+.searchBtn{
+    border: 0;
+    border-radius: 10px;
+    cursor: pointer;
+    margin-left: 20px;
+    background-color: rgb(192, 137, 35);
+    margin-top: 30px;
     padding: 10px 50px;
 }
 .bookingTicket{
