--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -168,7 +168,7 @@ input {
 }  */
 
 .login-section {
-	margin-top:100px;
+	margin-top:20px;
 	position: relative;
 	height: 90vh;
 	width: 100%;
@@ -181,13 +181,13 @@ input {
 	-webkit-box-align: center;
 		-ms-flex-align: center;
 			align-items: center;
-	padding: 20px;
+	
   }
   
   .login-section .container {
 	position: relative;
-	width: 800px;
-	height: 500px;
+	width: 500px;
+	height: 530px;
 	background: #fff;
 	-webkit-box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1);
 			box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1);
@@ -195,6 +195,7 @@ input {
   }
   
   .login-section .container .user {
+	padding-left: 70px;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -205,16 +206,16 @@ input {
 	display: flex;
   }
   
-  .login-section .container .user .imgBx {
+  /* .login-section .container .user .imgBx {
 	position: relative;
 	width: 50%;
 	height: 100%;
 	background: #ff0;
 	-webkit-transition: 0.5s;
 	transition: 0.5s;
-  }
+  } */
   
-  .login-section .container .user .imgBx img {
+  /* .login-section .container .user .imgBx img {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -222,9 +223,10 @@ input {
 	height: 100%;
 	-o-object-fit: cover;
 	   object-fit: cover;
-  }
-  
-  .login-section .container .user .formBx {
+  } */
+ 
+.login-section .container .user .formBx {
+	
 	position: relative;
 	width: 50%;
 	height: 100%;
@@ -242,7 +244,6 @@ input {
 	-webkit-transition: 0.5s;
 	transition: 0.5s;
   }
-  
   .login-section .container .user .formBx form h2 {
 	font-size: 18px;
 	font-weight: 600;
@@ -253,8 +254,8 @@ input {
 	margin-bottom: 10px;
 	color: #555;
   }
-  
-  .login-section .container .user .formBx form input {
+
+.login-section .container .user .formBx form input {
 	position: relative;
 	width: 100%;
 	padding: 10px;
@@ -268,8 +269,7 @@ input {
 	font-size: 14px;
 	letter-spacing: 1px;
 	font-weight: 300;
-  }
-  
+  } 
   .login-section .container .user .formBx form input[type="submit"] {
 	max-width: 100px;
 	background: #ff6e40;
