--- a/src/Components/Ride/Ride.css
+++ b/src/Components/Ride/Ride.css
@@ -1,6 +1,4 @@
 .ticketLayout{
-	/* background-image: url('../Images/group.png'); */
-    /* width: 300px; */
     margin-top: 100px;
     margin-left: 60px;
     border: 1px solid gray;
@@ -20,4 +18,15 @@
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	outline: none;
+}
+
+@media screen and (max-width: 400px) {
+	.ticketLayout {
+         margin: 100px 10px 10px 40px !important;
+		 padding: 10px 0;
+	}
+	.ticketLayout h2 {
+		margin: 0px;
+		font-size: 80%;
+	}
 }
